an attempt to fix flickering mobile menu on android (z-index)

--- a/public/local/mockup/css/main.scss
+++ b/public/local/mockup/css/main.scss
@@ -352,7 +352,7 @@ h4 {
     overflow-y: auto;
     background: #003466;
     padding: 10px 0;
-    z-index: 1;
+    z-index: -1;
   }
   .wrap {
     @media only screen and (max-width: 1023px) {
